renamed:    data/output_code1/amsterdam_centrum_100m_trimmed_results.geojson -> data/output_code1/amsterdam_centrum_west_100m_trimmed_results.geojson 	modified:   notebooks/replic1_OsmEditHist_OHSOME_Grid.ipynb 	modified:   notebooks/replic2_OsmToponyms_Analysis.ipynb 	deleted:    notebooks/replic3_TreeMap_taginfo.ipynb

--- a/notebooks/replic1_OsmEditHist_OHSOME_Grid.ipynb
+++ b/notebooks/replic1_OsmEditHist_OHSOME_Grid.ipynb
@@ -4,27 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://cienciasgeodesicas.ufpr.br/wp-content/uploads/2021/03/cropped-folder-site3.png\" alt=\"Drawing\"/>\n",
-    "\n",
-    "**Federal University of Parana, Curitiba, Brazil**\n",
-    "\n",
-    "Geodetic Science Graduate Programme\n",
-    "\n",
-    "---\n",
-    "\n",
-    "Authors:\n",
-    " - Darlan Miranda Nunes | [ORCID- 0000-0003-3557-5341](https://orcid.org/0000-0001-5566-7919)\n",
-    " - Silvana Philippi Camboim | [ORCID- 0000-0003-3557-5341](https://orcid.org/0000-0003-3557-5341)\n",
-    "---"
+    "# Collaborative Toponyms in OpenStreetMap: The Case of Amsterdam "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Collaborative Toponyms in OpenStreetMap: an open-source framework to investigate the relationship with intrinsic quality parameters\n",
+    "By:\n",
     "\n",
-    "DOI: [https://doi.org/10.1080/15230406.2025.2566807](https://doi.org/10.1080/15230406.2025.2566807)"
+    "__June Okongo, \n",
+    "Jonathan Polidano, and \n",
+    "Mashal Riaz__\n",
+    "\n",
+    "Based upon the previous study:\n",
+    "\n",
+    "__Collaborative toponyms in OpenStreetMap: an open-source framework toinvestigate the relationship with intrinsic quality parameters__\n",
+    "DOI: https://doi.org/10.1080/15230406.2025.2566807\n",
+    "\n",
+    "By:\n",
+    " - Darlan Miranda Nunes | [ORCID- 0000-0003-3557-5341](https://orcid.org/0000-0001-5566-7919)\n",
+    " - Silvana Philippi Camboim | [ORCID- 0000-0003-3557-5341](https://orcid.org/0000-0003-3557-5341)"
    ]
   },
   {
@@ -35,26 +35,13 @@
    "source": [
     "**Aims**\n",
     "\n",
-    "- To conduct a quantitative assessment of elements within OpenStreetMap (OSM) that have the 'name' attribute filled for potential categories of the Brazilian Authoritative Topographic Map; and\n",
+    "- To test the replicability of the previous study to the Centrum district of Amsterdam;\n",
     "\n",
-    "- To investigate the most significant intrinsic quality parameters that contribute to the reliability of toponyms in OSM.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "WeTBksgqPBen"
-   },
-   "source": [
-    "**Brief Overview of the Proposed Methodology**\n",
+    "- To conduct a quantitative assessment of elements within OpenStreetMap (OSM) that have the 'name' attribute filled for Amsterdam Centrum;\n",
     "\n",
-    "- Preliminary survey of potential OpenStreetMap (OSM) tags to provide relevant toponym information to categories of interest related to Brazilian Topographic Mapping;\n",
+    "- To investigate the most significant intrinsic quality parameters that contribute to the reliability of toponyms in OSM; and\n",
     "\n",
-    "- Execution of a quantitative analysis on collaboratively entered toponyms, utilizing homogeneous grid-based approaches; and\n",
-    "\n",
-    "- Assessment of intrinsic quality parameters as indicators of the reliability of toponyms in a scientific context.\n",
-    "\n",
-    "---"
+    "- To examine the impact of grid cell size upon the results obtained.\n"
    ]
   },
   {
@@ -149,7 +136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f6182c564c244eba89e3a94897de5c6",
+       "model_id": "99e3f70979dd4b27b8764499a7a3d946",
        "version_major": 2,
        "version_minor": 0
       },
@@ -204,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total grid cells in GeoJSON: 1\n"
+      "Total grid cells in GeoJSON: 818\n"
      ]
     }
    ],
