--- a/notebooks/replic2_OsmToponyms_Analysis.ipynb
+++ b/notebooks/replic2_OsmToponyms_Analysis.ipynb
@@ -4,27 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://cienciasgeodesicas.ufpr.br/wp-content/uploads/2021/03/cropped-folder-site3.png\" alt=\"Drawing\"/>\n",
-    "\n",
-    "**Federal University of Parana, Curitiba, Brazil**\n",
-    "\n",
-    "Geodetic Science Graduate Programme\n",
-    "\n",
-    "---\n",
-    "\n",
-    "Authors:\n",
-    " - Darlan Miranda Nunes | [ORCID- 0000-0003-3557-5341](https://orcid.org/0000-0001-5566-7919)\n",
-    " - Silvana Philippi Camboim | [ORCID- 0000-0003-3557-5341](https://orcid.org/0000-0003-3557-5341)\n",
-    "---"
+    "# Collaborative Toponyms in OpenStreetMap: The Case of Amsterdam "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Collaborative Toponyms in OpenStreetMap: an open-source framework to investigate the relationship with intrinsic quality parameters\n",
+    "By:\n",
     "\n",
-    "DOI: [https://doi.org/10.1080/15230406.2025.2566807](https://doi.org/10.1080/15230406.2025.2566807)"
+    "__June Okongo, \n",
+    "Jonathan Polidano, and \n",
+    "Mashal Riaz__\n",
+    "\n",
+    "Based upon the previous study:\n",
+    "\n",
+    "__Collaborative toponyms in OpenStreetMap: an open-source framework toinvestigate the relationship with intrinsic quality parameters__\n",
+    "DOI: https://doi.org/10.1080/15230406.2025.2566807\n",
+    "\n",
+    "By:\n",
+    " - Darlan Miranda Nunes | [ORCID- 0000-0003-3557-5341](https://orcid.org/0000-0001-5566-7919)\n",
+    " - Silvana Philippi Camboim | [ORCID- 0000-0003-3557-5341](https://orcid.org/0000-0003-3557-5341)"
    ]
   },
   {
@@ -40,7 +40,7 @@
     "id": "MUXsvAyM0G-r"
    },
    "source": [
-    "## Install the necessary libraries to the analysis"
+    "## Install the libraries necessary to the analysis"
    ]
   },
   {
